# OutreachBot

./: README.md
backend/: GenerateEmail.py  Steps.md  input.csv  output.csv  pyproject.toml  sendEmail.py  test.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/services/: file_processor.py  map_generator.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  FileInputPage.jsx  FileRenderPage.jsx  index.css
